@@ -101,6 +101,14 @@ floating point numbers. This is important because many Hive file formats
 store floating point values as text. Change the path
 ``/var/presto/installation`` to match the Presto installation directory.
 
+.. note::
+
+    When using Java 8, remove the ``-XX:PermSize``, ``-XX:MaxPermSize`` and
+    ``-Xbootclasspath`` options. The ``PermSize`` options are not supported
+    and the floatingdecimal patch is only for Java 7.
+
+.. _config_properties:
+
 Config Properties
 ^^^^^^^^^^^^^^^^^
 
@@ -115,10 +123,8 @@ The following is a minimal configuration for the coordinator:
 .. code-block:: none
 
     coordinator=true
-    datasources=jmx
+    node-scheduler.include-coordinator=false
     http-server.http.port=8080
-    presto-metastore.db.type=h2
-    presto-metastore.db.filename=var/db/MetaStore
     task.max-memory=1GB
     discovery-server.enabled=true
     discovery.uri=http://example.net:8080
@@ -128,33 +134,38 @@ And this is a minimal configuration for the workers:
 .. code-block:: none
 
     coordinator=false
-    datasources=jmx,hive
     http-server.http.port=8080
-    presto-metastore.db.type=h2
-    presto-metastore.db.filename=var/db/MetaStore
     task.max-memory=1GB
+    discovery.uri=http://example.net:8080
+
+Alternatively, if you are setting up a single machine for testing that
+will function as both a coordinator and worker, use this configuration:
+
+.. code-block:: none
+
+    coordinator=true
+    node-scheduler.include-coordinator=true
+    http-server.http.port=8080
+    task.max-memory=1GB
+    discovery-server.enabled=true
     discovery.uri=http://example.net:8080
 
 These properties require some explanation:
 
-* ``datasources``:
-  Specifies the list of catalog names that may have splits processed
-  on this node. Both the coordinator and workers have ``jmx`` enabled
-  because the JMX catalog enables querying JMX properties from all nodes.
-  However, only the workers have ``hive`` enabled, because we do not want
-  to process Hive splits on the coordinator, as this can interfere with
-  query coordination and slow down everything.
+* ``coordinator``:
+  Allow this Presto instance to function as a coordinator
+  (accept queries from clients and manage query execution).
+
+* ``node-scheduler.include-coordinator``:
+  Allow scheduling work on the coordinator.
+  For larger clusters, processing work on the coordinator
+  can impact query performance because the machine's resources are not
+  available for the critical task of scheduling, managing and monitoring
+  query execution.
 
 * ``http-server.http.port``:
   Specifies the port for the HTTP server. Presto uses HTTP for all
   communication, internal and external.
-
-* ``presto-metastore.db.filename``:
-  The location of the local H2 database used for storing metadata.
-  Currently, this is mainly used by features that are still in
-  development and thus a local database suffices.
-  Also, this should only be needed by the coordinator, but currently
-  it is also required for workers.
 
 * ``task.max-memory=1GB``:
   The maximum amount of memory used by a single task
@@ -173,8 +184,7 @@ These properties require some explanation:
   on startup. In order to simplify deployment and avoid running an additional
   service, the Presto coordinator can run an embedded version of the
   Discovery service. It shares the HTTP server with Presto and thus uses
-  the same port. For larger clusters, we recommend running Discovery as a
-  dedicated service. See :doc:`discovery` for details.
+  the same port.
 
 * ``discovery.uri``:
   The URI to the Discovery server. Because we have enabled the embedded
@@ -194,11 +204,12 @@ For example, consider the following log levels file:
 
 .. code-block:: none
 
-    com.facebook.presto=DEBUG
+    com.facebook.presto=INFO
 
-This would set the minimum level to ``DEBUG`` for both
+This would set the minimum level to ``INFO`` for both
 ``com.facebook.presto.server`` and ``com.facebook.presto.hive``.
-The default minimum level is ``INFO``.
+The default minimum level is ``INFO``
+(thus the above example does not actually change anything).
 There are four levels: ``DEBUG``, ``INFO``, ``WARN`` and ``ERROR``.
 
 Catalog Properties
@@ -220,6 +231,9 @@ contents to mount the ``jmx`` connector as the ``jmx`` catalog:
 
     connector.name=jmx
 
+Hive
+""""
+
 Presto includes Hive connectors for multiple versions of Hadoop:
 
 * ``hive-hadoop1``: Apache Hadoop 1.x
@@ -238,9 +252,39 @@ for your Hive metastore Thrift service:
     connector.name=hive-cdh4
     hive.metastore.uri=thrift://example.net:9083
 
+If your Hive metastore references files stored on a federated HDFS,
+or if your HDFS cluster requires other non-standard client options
+to access it, add this property to reference your HDFS config files:
+
+.. code-block:: none
+
+    hive.config.resources=/etc/hadoop/conf/core-site.xml,/etc/hadoop/conf/hdfs-site.xml
+
+Note that Presto configures the HDFS client automatically for most
+setups and does not require any configuration files. Only specify
+additional configuration files if absolutely necessary. We also
+recommend minimizing the configuration files to have the minimum set
+of requried properties, as additional properties may cause problems.
+
 You can have as many catalogs as you need, so if you have additional
 Hive clusters, simply add another properties file to ``etc/catalog``
 with a different name (making sure it ends in ``.properties``).
+
+Cassandra
+"""""""""
+
+Create ``etc/catalog/cassandra.properties`` with the following contents
+to mount the ``cassandra`` connector as the ``cassandra`` catalog,
+replacing ``host1,host2`` with a comma-separated list of the Cassandra
+nodes used to discovery the cluster topology:
+
+.. code-block:: none
+
+    connector.name=cassandra
+    cassandra.contact-points=host1,host2
+
+You will also need to set ``cassandra.native-protocol-port`` if your
+Cassandra nodes are not using the default port (9142).
 
 .. _running_presto:
 
